# sajuengine

./: .chatgpt-write-test.txt  .gitignore  README.md  package.json  setup_project.py
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/core/calendar/: daewoon.py  day_pillar.py  display_labels.py  ganzhi.py  hidden_stems.py  manseryuk_view.py  month_pillar.py  precise_solar_terms.py  relations.py  runtime_solar_terms.py  service.py  sewoon.py  solar_term_table.py  solar_terms.py  ten_gods.py  time_pillar.py  twelve_shinsal.py  twelve_unseong.py  xunkong.py  year_pillar.py
backend/app/core/case_authoring/: service.py
backend/app/core/cases/: loader.py
backend/app/core/extensions/: balance.py
backend/app/core/fact_builder/: service.py
backend/app/core/finalizer/: service.py
backend/app/core/fortune/: analysis.py  overlay.py  timeline.py
backend/app/core/governance/: service.py
backend/app/core/llm/: renderer.py  verifier.py
backend/app/core/logic_library/: service.py
backend/app/core/luck_delta/: service.py
backend/app/core/regression/: runner.py
backend/app/core/report_payload/: builder.py
backend/app/core/rule_candidates/: service.py
backend/app/core/rule_dsl/: evaluator.py  loader.py  simulator.py  validator.py
backend/app/core/rule_impact/: service.py
backend/app/tests/: test_calendar_engine.py  test_engine_pipeline.py  test_logic_integration.py  test_logic_library.py  test_rule_candidates.py  test_solar_term_table.py
backend/scripts/: generate_solar_terms_table.py  validate_solar_terms_table.py
(+65 files in other folders)
